--- a/.github/workflows/package-dlls.yml
+++ b/.github/workflows/package-dlls.yml
@@ -2,7 +2,7 @@
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   release:
     types: [created]
 
@@ -16,13 +16,13 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: "8.0.x"
 
       - name: Restore dependencies
-        run: dotnet restore UnbeatableManiaNew.sln
+        run: dotnet restore UnbeatableOsuEditor.sln
 
       - name: Build solution
-        run: dotnet build UnbeatableManiaNew.sln --configuration Release
+        run: dotnet build UnbeatableOsuEditor.sln --configuration Release
 
       - name: Find DLLs and package
         run: |
